tests/rosetta/out/Rust/chaocipher.error
rustc error: exit status 1
error[E0308]: mismatched types
 --> /tmp/TestMochiRustGoldenchaocipher1717186947/001/prog.rs:6:35
  |
6 |             if &s[i as usize..i + 1 as usize] == ch {
  |                                   ^^^^^^^^^^ expected `i32`, found `usize`

error[E0308]: mismatched types
 --> /tmp/TestMochiRustGoldenchaocipher1717186947/001/prog.rs:6:31
  |
6 |             if &s[i as usize..i + 1 as usize] == ch {
  |                               ^^^^^^^^^^^^^^ expected `usize`, found `i32`

error[E0277]: cannot add `usize` to `i32`
 --> /tmp/TestMochiRustGoldenchaocipher1717186947/001/prog.rs:6:33
  |
6 |             if &s[i as usize..i + 1 as usize] == ch {
  |                                 ^ no implementation for `i32 + usize`
  |
  = help: the trait `Add<usize>` is not implemented for `i32`
  = help: the following other types implement trait `Add<Rhs>`:
            `&i32` implements `Add<i32>`
            `&i32` implements `Add`
            `i32` implements `Add<&i32>`
            `i32` implements `Add`

error[E0308]: mismatched types
  --> /tmp/TestMochiRustGoldenchaocipher1717186947/001/prog.rs:14:16
   |
13 |     fn rotate(s: &'static str, n: i32) -> &'static str {
   |                                           ------------ expected `&str` because of return type
14 |         return format!("{}{}", &s[n as usize..s.len() as usize], &s[0 as usize..n as usize]);
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `&str`, found `String`
   |
   = note: this error originates in the macro `format` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> /tmp/TestMochiRustGoldenchaocipher1717186947/001/prog.rs:17:16
   |
16 |     fn scrambleLeft(s: &'static str) -> &'static str {
   |                                         ------------ expected `&str` because of return type
17 |         return format!("{}{}", format!("{}{}", format!("{}{}", &s[0..1], &s[2..14]), &s[1..2]), &s[14 as usize..s.len() as usize]);
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `&str`, found `String`
   |
   = note: this error originates in the macro `format` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> /tmp/TestMochiRustGoldenchaocipher1717186947/001/prog.rs:20:16
   |
19 | ...bleRight(s: &'static str) -> &'static str {
   |                                 ------------ expected `&str` because of return type
20 | ...rn format!("{}{}", format!("{}{}", format!("{}{}", format!("{}{}", &s[1..3], &s[4..15]), &s[3..4]), &s[15 as usize..s.len() as usize]), &s[0..1]);
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `&str`, found `String`
   |
   = note: this error originates in the macro `format` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> /tmp/TestMochiRustGoldenchaocipher1717186947/001/prog.rs:28:44
   |
28 |             let ch = &text[i as usize..i + 1 as usize];
   |                                            ^^^^^^^^^^ expected `i32`, found `usize`

error[E0308]: mismatched types
  --> /tmp/TestMochiRustGoldenchaocipher1717186947/001/prog.rs:28:40
   |
28 |             let ch = &text[i as usize..i + 1 as usize];
   |                                        ^^^^^^^^^^^^^^ expected `usize`, found `i32`

error[E0277]: cannot add `usize` to `i32`
  --> /tmp/TestMochiRustGoldenchaocipher1717186947/001/prog.rs:28:42
   |
28 |             let ch = &text[i as usize..i + 1 as usize];
   |                                          ^ no implementation for `i32 + usize`
   |
   = help: the trait `Add<usize>` is not implemented for `i32`
   = help: the following other types implement trait `Add<Rhs>`:
             `&i32` implements `Add<i32>`
             `&i32` implements `Add`
             `i32` implements `Add<&i32>`
             `i32` implements `Add`

error[E0308]: mismatched types
  --> /tmp/TestMochiRustGoldenchaocipher1717186947/001/prog.rs:32:50
   |
32 |                 out += &left[idx as usize..idx + 1 as usize];
   |                                                  ^^^^^^^^^^ expected `i32`, found `usize`

error[E0308]: mismatched types
  --> /tmp/TestMochiRustGoldenchaocipher1717186947/001/prog.rs:32:44
   |
32 |                 out += &left[idx as usize..idx + 1 as usize];
   |                                            ^^^^^^^^^^^^^^^^ expected `usize`, found `i32`

error[E0277]: cannot add `usize` to `i32`
  --> /tmp/TestMochiRustGoldenchaocipher1717186947/001/prog.rs:32:48
   |
32 |                 out += &left[idx as usize..idx + 1 as usize];
   |                                                ^ no implementation for `i32 + usize`
   |
   = help: the trait `Add<usize>` is not implemented for `i32`
   = help: the following other types implement trait `Add<Rhs>`:
             `&i32` implements `Add<i32>`
             `&i32` implements `Add`
             `i32` implements `Add<&i32>`
             `i32` implements `Add`

error[E0368]: binary assignment operation `+=` cannot be applied to type `&str`
  --> /tmp/TestMochiRustGoldenchaocipher1717186947/001/prog.rs:32:17
   |
32 |                 out += &left[idx as usize..idx + 1 as usize];
   |                 ---^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                 |
   |                 cannot use `+=` on type `&str`

error[E0308]: mismatched types
  --> /tmp/TestMochiRustGoldenchaocipher1717186947/001/prog.rs:35:51
   |
35 |                 out += &right[idx as usize..idx + 1 as usize];
   |                                                   ^^^^^^^^^^ expected `i32`, found `usize`

error[E0308]: mismatched types
  --> /tmp/TestMochiRustGoldenchaocipher1717186947/001/prog.rs:35:45
   |
35 |                 out += &right[idx as usize..idx + 1 as usize];
   |                                             ^^^^^^^^^^^^^^^^ expected `usize`, found `i32`

error[E0277]: cannot add `usize` to `i32`
  --> /tmp/TestMochiRustGoldenchaocipher1717186947/001/prog.rs:35:49
   |
35 |                 out += &right[idx as usize..idx + 1 as usize];
   |                                                 ^ no implementation for `i32 + usize`
   |
   = help: the trait `Add<usize>` is not implemented for `i32`
   = help: the following other types implement trait `Add<Rhs>`:
             `&i32` implements `Add<i32>`
             `&i32` implements `Add`
             `i32` implements `Add<&i32>`
             `i32` implements `Add`

error[E0368]: binary assignment operation `+=` cannot be applied to type `&str`
  --> /tmp/TestMochiRustGoldenchaocipher1717186947/001/prog.rs:35:17
   |
35 |                 out += &right[idx as usize..idx + 1 as usize];
   |                 ---^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                 |
   |                 cannot use `+=` on type `&str`

error: aborting due to 17 previous errors

Some errors have detailed explanations: E0277, E0308, E0368.
For more information about an error, try `rustc --explain E0277`.
